# ambient_player

./: .gitignore  README.md  ambient_player.service  main.py  pyproject.toml  start.sh
src/ambient_player/: main.py
static/: index.html
tests/: test_player.py
